# rusty-nes

./: .gitignore  Cargo.toml  README.md
config/: cli.yaml
resources/test/: memory_contents.txt
src/: cpu.rs  main.rs  memory.rs
tests/integration/: nestest.rs
