[package]
name = "rusty-nes"
version = "0.1.0"
authors = ["Jonathan Rainer <jonrainer@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "1.0.0"
log = "0.4"
hex = "0.4.3"
clap = { version = "2.33.3", features = ["yaml"] }

[dev-dependencies]
rstest = "0.11.0"